feat: clean up [DHIS2-21899]